add_subdirectory (001_Empty_OpenGL_window)
add_subdirectory (002_GL_POINTS)
add_subdirectory (003_GL_LINE_LOOP)
add_subdirectory (004_Texturing)
add_subdirectory (005_Texture_Filtering)
add_subdirectory (006_Heightmap_Bump)
add_subdirectory (007_Transform_Feedback)
add_subdirectory (008_Geometry_Shader)
add_subdirectory (009_Stencil_Shadows_GL_TRIANGLES_ADJACENCY) 
add_subdirectory (010_Stencil_Shadows_GL_TRIANGLES) 
add_subdirectory (011_Render_Procedural_Texture) 
add_subdirectory (012_Procedural_Textures)
add_subdirectory (013_Procedural_Textures_Continued)
add_subdirectory (014_Alpha_Blending)
add_subdirectory (015_Rendering_Order)
add_subdirectory (016_Cubemap_Textures)
add_subdirectory (017_SSBO_Attractor)
add_subdirectory (018_SSBO_Fractal_Dodecahedron)
add_subdirectory (019_Plato_Solids)
add_subdirectory (020_SDF_Fonts)
add_subdirectory (021_Text)
add_subdirectory (022_Reflections)
add_subdirectory (023_Scene_Cubemap_Reflection)
add_subdirectory (024_Bloom)
add_subdirectory (025_HDR)
add_subdirectory (026_Spherical_Cave)
add_subdirectory (027_Toral_Cave)
add_subdirectory (028_GL_TEXTURE_BUFFER)
add_subdirectory (029_SSAO)
add_subdirectory (030_Plane_Shadows)
add_subdirectory (031_Using_GL_STENCIL_BUFFER)
add_subdirectory (032_Image_Filter)
add_subdirectory (033_Fur_using_GL_GEOMETRY_SHADER)
add_subdirectory (034_Multiple_Viewports)
add_subdirectory (035_Vertex_Ambient_Occlusion)
add_subdirectory (036_Adaptive_Tesselation)
add_subdirectory (037_Noise)
add_subdirectory (038_Trilinear_Blend) 
add_subdirectory (039_Overdraw_Count)
add_subdirectory (040_Order_Independent_Transparency)
add_subdirectory (041_OBJ_Loader)
add_subdirectory (042_VAO_Loader)
add_subdirectory (043_Strip_Visualizer)
add_subdirectory (044_Ambient_Occlusion)
add_subdirectory (045_Compute_Shader_SSAO)
add_subdirectory (046_Fractal_Surface)
add_subdirectory (047_RayTracer)
add_subdirectory (049_ImGui)
add_subdirectory (050_Ray_Marching)
add_subdirectory (051_Ray_March_Textures)
add_subdirectory (052_Ocean)
add_subdirectory (053_FFT4)
add_subdirectory (054_FFT8)
add_subdirectory (055_FFT16)
add_subdirectory (060_GLSL_Noise)
add_subdirectory (061_Noise_Derivative)
add_subdirectory (062_GLSL_Noise_2)
add_subdirectory (065_Deferred_Shading) 
add_subdirectory (066_Marching_Cubes_CS) 
add_subdirectory (070_Convex_Hull)
add_subdirectory (071_Cache_Optimizer)
add_subdirectory (075_Toral_Cave_Post_Processing) 
add_subdirectory (080_Shader_Toy)
add_subdirectory (090_Stripifier)
add_subdirectory (091_SGI_Stripifier)
add_subdirectory (092_Tri_Stripper)
add_subdirectory (094_Stripifier2)
add_subdirectory (095_NvTriStrip)

IF (FFMPEG_FOUND)
    add_subdirectory (098_x264_Encoder)
    add_subdirectory (099_Video_Player)
    add_subdirectory (100_Player)
ELSE()
    message("DEMO 098 :: x264 video encoder will not be built.")
    message("DEMO 099 :: Video player example will not be built.")
ENDIF()

#------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
# old stuff slowly moving up
#------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
#add_subdirectory (009_Instanced_Draw)
#add_subdirectory (010_Spherical_Triangles)
#add_subdirectory (011_Quad_Tesselation)
#add_subdirectory (020_Hyperbolic_Space)
#add_subdirectory (021_Rendering_to_Texture)
#add_subdirectory (029_Black_Holes)
#add_subdirectory (035_Environment_Map_GL_TEXTURE_CUBE_MAP)
#add_subdirectory (037_GL_TEXTURE_3D)
#add_subdirectory (038_Transform_Feedback)
#add_subdirectory (039_Cubemap_Shadows)
#add_subdirectory (043_DDS_Texture_Loader)
#add_subdirectory (044_OBJ_Transform)

                               