#------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
# Vulkan demos
# dependency :: LunarG SDK
#------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------

add_subdirectory (001_First_Triangle)
add_subdirectory (002_VAO)
add_subdirectory (003_UBO)
add_subdirectory (004_Textures)
add_subdirectory (005_RayMarch)
add_subdirectory (006_Depth_Attachment)
add_subdirectory (007_ImGui)